--- a/frontend/src/app/quiz/quiz-selection/quiz-selection-card/quiz-selection-card.component.scss
+++ b/frontend/src/app/quiz/quiz-selection/quiz-selection-card/quiz-selection-card.component.scss
@@ -3,8 +3,6 @@ app-button {
   height: 100%;
 
   .quiz-card-content {
-    display: flex;
-    flex-direction: column;
     height: 100%;
     width: 100%;
 
